chore(): update html code

--- a/src/graphAuth/graphAuth.html
+++ b/src/graphAuth/graphAuth.html
@@ -1,5 +1,2 @@
-<!--Follow these docs to register your app and receive a clientID https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/README.md#prerequisite-->
-
-<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.3/js/msal.js"></script>
-
-<button onclick="authWithGraph('clientIdHere')">Login</button>
+<mgt-msal-provider client-id="asdfasdfj23"></mgt-msal-provider>
+<mgt-login></mgt-login>
