--- a/src/graphContacts/graphContacts.html
+++ b/src/graphContacts/graphContacts.html
@@ -1,5 +1,1 @@
-<!--Follow these docs to register your app and receive a clientID https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/README.md#prerequisite-->
-
-<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.3/js/msal.js"></script>
-
-<button onclick="getContacts('clientIdHere')">Get Contacts</button>
+<mgt-people></mgt-people>
