chore(): add script tag to graph snippits

--- a/src/graphAuth/graphAuth.html
+++ b/src/graphAuth/graphAuth.html
@@ -1,2 +1,4 @@
+<script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+
 <mgt-msal-provider client-id="asdfasdfj23"></mgt-msal-provider>
 <mgt-login></mgt-login>
