--- a/src/graphPerson/graphPerson.html
+++ b/src/graphPerson/graphPerson.html
@@ -1,1 +1,3 @@
+<script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+
 <mgt-person person-query="me" show-name show-email></mgt-person>
