--- a/src/graphAuth/graphAuth.html
+++ b/src/graphAuth/graphAuth.html
@@ -1,4 +1,4 @@
 <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
 
-<mgt-msal-provider client-id="asdfasdfj23"></mgt-msal-provider>
+<mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
 <mgt-login></mgt-login>
