chore(): update with new pre-req content

--- a/src/graphCalendar/graphCalendar.html
+++ b/src/graphCalendar/graphCalendar.html
@@ -1,5 +1,3 @@
-<!--Follow these docs to register your app and receive a clientID https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/README.md#prerequisite-->
+<script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
 
-<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.3/js/msal.js"></script>
-
-<button onclick="getCalendarEvents('clientIdHere')">Get Calendar Events</button>
+<mgt-agenda group-by-day></mgt-agenda>
