chore(): add link

--- a/src/clipboard/clipboard.html
+++ b/src/clipboard/clipboard.html
@@ -1,3 +1,2 @@
-<button onclick="copyToClipboard('Text im copying')">
-  Copy To Clipboard
-</button>
+<script src="https://unpkg.com/pwabuilder-components@latest"></script>
+<pwb-clipboard texttocopy="Hello World"></pwb-clipboard> 
