--- a/src/share/share.html
+++ b/src/share/share.html
@@ -1,3 +1,2 @@
-<button onclick="share('title', 'https://www.xbox.com/en-US/xbox-one-x', 'Check out the new Xbox!')">
-  Share
-</button>
+<script src="https://unpkg.com/pwabuilder-components@latest"></script>
+<pwb-share title="share title" text="share text" url="https://microsoft.com"></pwb-share>
