--- a/src/geolocation/geolocation.html
+++ b/src/geolocation/geolocation.html
@@ -1,3 +1,2 @@
-<button onclick="getLocation()">
-  Get Location
-</button>
+<script src="https://unpkg.com/pwabuilder-components@latest"></script>
+<pwb-geolocation></pwb-geolocation>
