--- a/src/installButton/installButton.html
+++ b/src/installButton/installButton.html
@@ -1,3 +1,3 @@
-<button onclick="install()">
-  Install
-</button>
+<script src="https://unpkg.com/pwabuilder-components@latest"></script>
+<pwb-install iconpath="https://webboard-app.web.app/assets/icon/256.png" manifestpath="/manifest.webmanifest"
+  forceshow="true"></pwb-install>
