--- a/src/graphTasks/graphTasks.html
+++ b/src/graphTasks/graphTasks.html
@@ -1,3 +1,3 @@
 <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
 
-<mgt-tasks data-source="planner"></mgt-tasks>
+<mgt-tasks></mgt-tasks>
