--- a/src/immersiveReader/immersiveReader.html
+++ b/src/immersiveReader/immersiveReader.html
@@ -1,6 +1,9 @@
 <script src="https://unpkg.com/pwabuilder-components@latest"></script>
-<pwb-immersiveReader>
+
+<pwb-immersiveReader irName="SAMPLENAME" irToken="SAMPLETOKEN">
   <div>
-    This is the text that will appear in the immersive reader.  You can put any text or HTML inside this tag to identify that portion of your page as the reading content.
+   Add any text or HTML inside this tag to have it presented in the imersive reader
   </div>
 </pwb-immersiveReader>
+
+<div class="immersive-reader-button">Read with Immersive Reader</div>
