--- a/src/installButton/installButton.html
+++ b/src/installButton/installButton.html
@@ -1,3 +1,5 @@
-<script src="https://unpkg.com/pwabuilder-components@latest"></script>
-<pwb-install iconpath="https://webboard-app.web.app/assets/icon/256.png" manifestpath="/manifest.webmanifest"
-  forceshow="true"></pwb-install>
+<script
+  type="module"
+  src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
+></script>
+<pwa-install></pwa-install>
