pwa-auth docs uses latest js

--- a/src/authButton/authButton.html
+++ b/src/authButton/authButton.html
@@ -1,7 +1,7 @@
 <!-- Place this in <head> or <body> -->
 <script
   type="module"
-  src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwaauth/dist/pwa-auth.js"
+  src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwaauth@latest/dist/pwa-auth.min.js"
 ></script>
 
 <!-- Add this where you want the Sign In button to show up -->
