Updated pwa-auth code snippet for Apple key

--- a/src/authButton/headless.html
+++ b/src/authButton/headless.html
@@ -3,5 +3,5 @@
 <script>
     // Use your own UI to invoke pwa-auth sign-in
     const pwaAuth = document.querySelector("pwa-auth");
-    myOwnSignInBtn.addEventHandler("click", () => pwaAuth.signIn("Microsoft")); // Or Google or Facebook
+    myOwnSignInBtn.addEventHandler("click", () => pwaAuth.signIn("Microsoft")); // Or Google, Facebook, or Apple
 </script>
